Adjust display option for .value__option-group to prevent regression on vertical spacing in layout
HAVNTHEME-96

--- a/app/assets/stylesheets/workarea/storefront/components/_value.scss
+++ b/app/assets/stylesheets/workarea/storefront/components/_value.scss
@@ -81,5 +81,6 @@ $value-icon-top-offset: 20px !default;
 
 
     .value__option-group {
+        display: inline;
         font-size: 0; /* [2] */
     }
